--- a/app/build.gradle
+++ b/app/build.gradle
@@ -261,8 +261,8 @@ dependencies {
 
     //firebase, 崩溃统计和性能统计
     implementation platform('com.google.firebase:firebase-bom:32.5.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx:21.5.0'
-    implementation 'com.google.firebase:firebase-perf-ktx:20.5.0'
+    implementation 'com.google.firebase:firebase-analytics:21.5.0'
+    implementation 'com.google.firebase:firebase-perf:20.5.0'
 
     //LeakCanary, 内存泄露检测
     //debugImplementation('com.squareup.leakcanary:leakcanary-android:2.7')
