--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,6 +78,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Build With Gradle
+        continue-on-error: true
         run: |
           if [ ${{ env.type }} == 'release' ]; then
             typeName="原包名"
@@ -91,25 +92,52 @@ jobs:
           echo "开始${{ env.product }}$typeName构建"
           chmod +x gradlew
           ./gradlew assemble${{ env.product }}release --build-cache --parallel --daemon --warning-mode all
-          echo "修改文件名"
+          echo "修改APK文件名"
           mkdir -p ${{ github.workspace }}/apk/
-          mkdir -p ${{ github.workspace }}/mapping/
           for file in `ls ${{ github.workspace }}/app/build/outputs/apk/*/*/*.apk`; do
             mv "$file" ${{ github.workspace }}/apk/legado_${{ env.product }}_${{ env.VERSIONL }}_$typeName.apk
           done
+          echo "移动mapping文件"
+          mkdir -p ${{ github.workspace }}/mapping/
           for file in `ls ${{ github.workspace }}/app/build/outputs/mapping/*/mapping.txt`; do
             mv "$file" ${{ github.workspace }}/mapping/mapping.txt
           done
+
+      - name: Move Missing Rules Files
+        run: |
+          echo "移动missing_rules.txt文件"
+          mkdir -p ${{ github.workspace }}/mapping/
+          for file in `ls ${{ github.workspace }}/app/build/outputs/mapping/*/missing_rules.txt`; do
+            mv "$file" ${{ github.workspace }}/mapping/missing_rules.txt
+          done
+
+      - name: Upload Missing Rules File To Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: legado.${{ env.product }}.${{ env.type }}.mapping.missing_rules
+          if-no-files-found: ignore
+          path: ${{ github.workspace }}/mapping/missing_rules.txt
+
+      - name: Check Build production
+        run: |
+          cd ${{ github.workspace }}/apk/
+          if [ ! -e legado_*.apk ]; then
+            echo "Build production not found! Check gradle logs."
+            exit 1
+          fi
+
       - name: Upload App To Artifact
         uses: actions/upload-artifact@v4
         with:
           name: legado.${{ env.product }}.${{ env.type }}
+          if-no-files-found: ignore
           path: ${{ github.workspace }}/apk/*.apk
 
       - name: Upload Mapping File To Artifact
         uses: actions/upload-artifact@v4
         with:
           name: legado.${{ env.product }}.${{ env.type }}.mapping
+          if-no-files-found: ignore
           path: ${{ github.workspace }}/mapping/mapping.txt
 
   lanzou:
